package com.emil_z.model.BASE;

public enum DOW {
    Sunday,
    Monday,
    Tuesday,
    Wednesday,
    Thursday,
    Friday,
    Saturday
}