package com.emil_z.model.BASE;

import java.io.Serializable;

public enum EntityStatus implements Serializable {
    ADDED,
    MODIFIED,
    DELETED,
    UNCHANGED
}