package com.emil_z.model;

/**
 * Enum representing the different types of games available.
 */
public enum GameType {
	CPU,
	LOCAL,
	ONLINE,
	REPLAY
}